tests/ui/parser/issues/issue-69259.rs
fn main() {}

fn f) {} //~ ERROR unexpected closing delimiter
